destinations landing was not showing error resolved as well as in destinations and holidays types groups menu after clicks on submenus pages was not navigating correctly resolved that too.

--- a/public/assets/stylesheets/css/style.css
+++ b/public/assets/stylesheets/css/style.css
@@ -2782,4 +2782,9 @@
   line-height: 38px;
 }
 
+.select_country__input-container input:focus,
+.select_country__input-container input:focus-visible {
+  box-shadow: none !important;
+}
+
 /*# sourceMappingURL=style.css.map */
